Fix chat layout white space issue

--- a/style.css
+++ b/style.css
@@ -5,12 +5,15 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 body{
-    width: 100%;
-    height: 100%;
+     height: 100%;
+    margin: 0;
+    background-color: rgb(19, 67, 110);
+    display: flex;
+    flex-direction: column;
 }
 .chat-container{
     width: 100%;
-    height: 35rem;
+    height: 40rem;
     background-color:rgb(19, 67, 110);
     /* rgb(19, 67, 110) */
     padding: 20px;
@@ -35,6 +38,13 @@ body{
     border-radius:40px 0px 40px 40px;
     box-shadow: 2px 2px 10px black;
     padding: 10px;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+}
+.chooseimage{
+    width: 20%;
+    border-radius: 30px;
 }
 .ai-chat-area{
     width: 90%;
@@ -64,7 +74,7 @@ body{
     display: flex;
     gap: 10px;
     width: 100%;
-    height: 141px;
+    height: 100%;
 }
 .prompt-area input{
     background-color:rgba(0, 0, 0, 0.49);
@@ -96,4 +106,24 @@ body{
 }
 .load{
     filter: drop-shadow(2px 2px 10px black);
+}
+.choose{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+#image{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+@media (max-width:600px){
+    .user-chat-box{
+        width: 80%;
+        left: 20%;
+    }
+    .ai-chat-box{
+        width: 80%;
+        left: 0;
+    }
 }
